--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ serde = {version="1.0", features=["derive"]}
 regex = "1"
 rand = "0.8"
 log = "0.4"
-log4rs = "1.1"
+simplelog = "0.12"
+chrono = "0.4"
